# voulezvous-tv-Rust

./: .gitignore  AGENTS.md  BUSINESS_LOGIC_INTEGRATION.md  CHANGELOG.md  Cargo.toml  EPIC-P.md  EXECUTIVE_SUMMARY.md  Epics M, N and O.md  PR_D7_TO_D11_ROADMAP.md  README.md  SPEC_PR_D7_DISCOVERY_LOOP.md  Tasklist.md  VVTV INDUSTRIAL DOSSIER.md  VVTV_INDUSTRIAL_DOSSIER_COMPLETE.md
.github/workflows/: ci.yml
alerts/: prometheus_rules.yaml
configs/: aws_production.toml  broadcaster.toml  browser.toml  business_logic.yaml  processor.toml  risk_register.json  signature_profile.json  vvtv.toml
configs/cdn/: cloudflare_worker.js
configs/logrotate/: vvtv
configs/nginx/: api_gateway.conf  nginx.conf
dashboards/: ops_overview.json
docs/: AWS_DEPLOYMENT_PLAN.md  BUDGET_MAC_MINI_DEPLOYMENT.md  BUSINESS_LOGIC_README.md  CURATOR_VIGILANTE.md  LLM_HOOKS.md  README.md  STREAMING_ARCHITECTURE_EXPLAINED.md  compliance_policies.md  deployment.md  failover.md  maintenance.md  plan_operations.md
docs/adr/: adr-0001-docs-structure.md
docs/compliance/: README.md  csam_response.md  drm_detection.md  license_audit.md
docs/epic_a/: README.md  filesystem_and_permissions.md  nginx_origin.md  (+4 more)
scripts/: optimize_databases.sh
sql/: economy.sql  metrics.sql  plans.sql  queue.sql  tenants.sql  viewers.sql
vvtv-core/: Cargo.toml
vvtv-core/src/: config.rs  error.rs  incident.rs  lib.rs  monitor.rs  queue.rs  sqlite.rs  test_framework.rs
vvtv-core/src/autopilot/: canary.rs  drift_monitor.rs  engine.rs  history.rs  incident_triage.rs  logging.rs  mod.rs  optimizer.rs  scheduler.rs  sliding_bounds.rs  validation.rs
vvtv-core/src/broadcaster/: failover.rs  mod.rs  watchdog.rs
vvtv-core/src/browser/: automation.rs  discovery_loop.rs  error.rs  error_handler.rs  fingerprint.rs  human.rs  ip_rotator.rs  metadata.rs  metrics.rs  mod.rs  pbd.rs  profile.rs  qa.rs  retry.rs  searcher.rs
vvtv-core/src/business_logic/: mod.rs
vvtv-core/src/compliance/: audit.rs  csam.rs  drm.rs  mod.rs
vvtv-core/src/curation/: mod.rs
vvtv-core/src/distribution/: cdn.rs  edge.rs  mod.rs  replicator.rs  security.rs
vvtv-core/src/llm/: mod.rs
vvtv-core/src/monetization/: adaptive.rs  audience.rs  dashboard.rs  economy.rs  mod.rs  spots.rs
vvtv-core/src/plan/: error.rs  mod.rs  models.rs  planner.rs  realizer.rs  store.rs
vvtv-core/src/plan/selection/: mod.rs
vvtv-core/src/processor/: error.rs  mod.rs  types.rs
vvtv-core/src/quality/: mod.rs
vvtv-core/src/test_framework/: benchmarks.rs  golden_selection.rs  integration.rs  llm_stress.rs
vvtv-core/tests/: compliance.rs  discovery_loop_test.rs  monetization.rs  plan_store.rs  processor_pipeline.rs  queue.rs
vvtvctl/: Cargo.toml
vvtvctl/src/: lib.rs  main.rs
vvtvctl/src/commands/: compliance.rs  discover.rs  incident.rs  mod.rs  ops.rs
(+75 files in other folders)
