[package]
name = "vvtv-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.29", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt", "time"] }
toml = "0.8"
thiserror = "1.0"
serde_json = "1.0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.10"
