[package]
name = "vvtv-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.29", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt", "time", "fs", "io-util"] }
toml = "0.8"
thiserror = "1.0"
serde_json = "1.0"
tracing = "0.1"
chromiumoxide = { version = "0.5", default-features = false, features = ["tokio-runtime"] }
async-trait = "0.1"
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
tokio-stream = "0.1"
regex = "1.12"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
url = "2"

[dev-dependencies]
tempfile = "3.10"
