[package]
name = "vvtvctl"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rusqlite = { version = "0.29" }
vvtv-core = { path = "../vvtv-core" }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3.10"
serde_json = "1.0"
rusqlite = { version = "0.29" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "vvtvctl"
path = "src/main.rs"
